event category and event type

--- a/mystery/CMakeLists.txt
+++ b/mystery/CMakeLists.txt
@@ -3,6 +3,8 @@
 # Compiler definitions / preprocessor defs
 add_compile_definitions(MYSTERY_BUILD_DLL)
 
+include_directories(${CMAKE_SOURCE_DIR}/mystery/src)
+
 # mystery source files
 set(MYSTERY_SRC 
 	src/log.cpp
